--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
 		<version>3.0.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.sutherland</groupId>
+	<groupId>com.sutherland.lms</groupId>
 	<artifactId>Leave-Management-System</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Leave-Management-System</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Capstone Project</description>
 	<url/>
 	<licenses>
 		<license/>
