--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.datasource.password = 2004
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.Oracle10gDialect
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql=true
+
+#logging.level.root : INFO
+#logging.file.name = d:/sutherland/leavemanagementsystem.log
